k8s-deploy/k8s-httpserver.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpserver-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: httpserver
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
      labels:
        app: httpserver
    spec:
      terminationGracePeriodSeconds: 60
      containers:
        - name: httpserver
          image: wadedc/httpserver:v1.2
          resources:
            limits:
              memory: 1Gi
              cpu: '1'
            requests:
              memory: 256Mi
              cpu: 100m
          readinessProbe:
            httpGet:
              port: 8080
              path: /healthz
            initialDelaySeconds: 30
            periodSeconds: 5
            failureThreshold: 5
            successThreshold: 1
          livenessProbe:
            httpGet:
              port: 8080
              path: /healthz
            initialDelaySeconds: 60
            periodSeconds: 5
            failureThreshold: 5
            successThreshold: 1
---
apiVersion: v1
kind: Service
metadata:
  name: httpserver-service
spec:
  type: ClusterIP
  ports:
    - port: 8080
      protocol: TCP
      name: http
  selector:
    app: httpserver
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpserver-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
        - wadedc-httpserver.cncamp.com
      secretName: cncamp-tls
  rules:
    - host: wadedc-httpserver.cncamp.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: httpserver-service
                port:
                  number: 8080
